[package]
name = "eha"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", default-features = false, features = ["error-context", "help", "std", "usage", "derive"] }
jiff = { version = "0.1.29", default-features = false, features = ["std", "serde"] }
rand = "0.9.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
tempfile = "3.16.0"
