[package]
name = "eha"
description = "etc-hosts adder for localhost development domains"
license-file = "LICENSE"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95" }
clap = { version = "4.5.27", features = ["derive"] }
jiff = { version = "0.1.29", features = ["serde"] }
rand = { version = "0.9.0" }
serde_json = { version = "1.0.138" }
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
tempfile = "3.16.0"
